# True-Random-Encryption

./: .clangd  .gitignore  CMakeLists.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP_V4.md  vcpkg.json
.github/workflows/: release.yml
docs/: GUI_USAGE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP_V4.md
include/compression/: CompressionManager.hpp
scripts/: build_linux.sh  build_macos.sh  build_windows.bat  install_dependencies.sh  installer.nsi
src/: Quantum_Random_Encryption.cpp  True_Random_Encryption.cpp
src/core/: CryptoCore.cpp  CryptoCore.hpp
src/entropy/: EntropyManager.cpp  EntropyManager.hpp  EntropySource.hpp  HardwareSources.hpp  SystemSource.hpp
src/gui/: Backend.cpp  Backend.hpp  MainWindow.cpp  MainWindow.hpp  main_gui.cpp
src/gui/resources/: resources.qrc  style.qss  style_dark.qss  style_light.qss
src/gui/resources/qml/: Main.qml
src/gui/resources/qml/components/: CompressionMenu.qml  CustomButton.qml  FileDropArea.qml
src/platform/: Platform.hpp
src/utils/: TarManager.hpp
